# KENN2

./: LICENSE  README.md  parsers.py  setup.cfg
layers/: Kenn.py  RangeConstraint.py  RelationalKENN.py
layers/relational/: GroupBy.py  Join.py
layers/residual/: ClauseEnhancer.py  KnowledgeEnhancer.py
src/KENN2/: parsers.py
src/KENN2/layers/: Kenn.py  RelationalKENN.py
src/KENN2/layers/relational/: GroupBy.py
src/KENN2/layers/residual/: ClauseEnhancer.py  KnowledgeEnhancer.py
