[metadata]
name = KENN2
version = 0.1
author = Alessandro Daniele, Riccardo Mazzieri, Luciano Serafini  
author_email = daniele@fbk.eu, serafini@fbk.eu
description = Knowledge Enhanced Neural Networks
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords = 
    kenn
    Statistical Relational Learning
    Neural Symbolic Learning
    Learning with logic

url = https://github.com/DanieleAlessandro/KENN2
project_urls =
    Bug Tracker = https://github.com/DanieleAlessandro/KENN2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    tensorflow
    numpy

[options.packages.find]
where = src